# Prefix-Filter

./: CMakeLists.txt  LICENSE.md  README.md  RunAll.sh  example.cpp  hashutil.h  main-built.cpp  main-fpp.cpp  main-perf.cpp
Bloom_Filter/: Impala512.h  bloom.hpp  simd-block-fixed-fpp.h  simd-block.h
Prefix-Filter/: Shift_op.cpp  Shift_op.hpp  min_pd256.cpp  min_pd256.hpp
TC-Shortcut/: TC-shortcut.hpp  tc-sym.cpp  tc-sym.hpp
Tests/: PerfEvent.hpp  smart_tests.cpp  smart_tests.hpp  wrappers.hpp
cuckoofilter/src/: cuckoofilter.h  cuckoofilter_stable.h  hashutil.cc  hashutil.h  packedtable.h  printutil.cc  simd-block.h  singletable.h
scripts/: Generate-median-csv.py  Naming.py  arg-plotter.py  build-csv-parser.py  fpp-parser-server.py
